syntax = "proto3";

package com.circulosiete.cursos.k8s;
option java_multiple_files= true;

message InventarioRequest {
  string nombre = 1;
  int32 precio = 2;
  string descripcion = 3;
}

message IdRequest {
  int64 id = 1;
}

message GetResponse {
  int64 id = 1;
  string nombre = 2;
  string descripcion = 3;
  int32 precio = 4;
}

message InventarioResponse {
  bool aceptado = 1;
}

message ValidacionResponse {
  bool valido = 1;
}

message CreateRequest {
  string nombre = 1;
}

service  InventarioService {
  rpc InventarioCreate (InventarioRequest) returns (InventarioResponse);
  rpc InventarioGet (IdRequest) returns (GetResponse);
  rpc InventarioDelete (IdRequest) returns (InventarioResponse);
  rpc InventarioUpdate (GetResponse) returns (InventarioResponse);

}

service ValidacionService {
  rpc ValidacionCreate (CreateRequest) returns (ValidacionResponse);
  rpc ValidacionDelete (IdRequest) returns (ValidacionResponse);
}